css/style.css
/* Variables */
:root {
    --color-orange: #ff6900;
    --color-green: #008000;
    --color-red: #ff0000;
    --color-dark: #1a1a1a;

    --container: 1080px;

    --header-height: 70px;

    --layout-gap: 10px;
}


/* Resets */
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}


/* Generics */
body {
    font-family: sans-serif;
    font-size: 14px;
    padding-top: calc(var(--header-height) + 20px);
}

ul {
    list-style: none;
}

a {
    text-decoration: none;
}

h3 {
    font-size: 18px;
    margin-bottom: 10px;
}

h4 {
    margin-bottom: 8px;
}


/* Utils */
.container {
    max-width: var(--container);
    margin-left: auto;
    margin-right: auto;
}

.bg-red {
    background-color: var(--color-red);
}

.bg-green {
    background-color: var(--color-green);
}


/* Layout */
.row {
    display: flex;
    flex-wrap: wrap;
    margin-left: calc(var(--layout-gap) * -1);
    margin-right: calc(var(--layout-gap) * -1);
}

.col {
    flex-basis: calc(100% / 3);
    padding: var(--layout-gap);
}


/* Debug */
.border {
    border: 2px dashed #fff;
}

/* ====================================== */

/* Header */
header {
    position: fixed;
    top: 0;
    width: 100%;
    background-color: var(--color-orange);
    box-shadow: 0 1px 4px 0 rgba(0, 0, 0, 0.8);
    z-index: 1;
}


/* Navbar */
.navbar {
    height: 70px;
    display: flex;
    align-items: center;
}

.navbar > * {
    flex-basis: calc(100% / 3);
}


/* Navbar Logo */
.navbar-logo {
    text-align: center;
}

.navbar-logo img {
    height: 30px;
}


/* Navbar Menu */
.navbar-menu ul {
    display: flex;
}

.navbar-menu a {
    display: block;
    color: #fff;
    font-size: 16px;
    font-weight: bold;
    padding: 5px;
}


/* Navbar Buttons */
.navbar-buttons {
    display: flex;
    justify-content: flex-end;
}


/* Button */
.btn {
    display: inline-block;
    border: 1px solid transparent;
    font-size: 18px;
    padding: 6px;
}

.btn.btn-light {
    color: #fff;
}


/* Card */
.card-top {
    position: relative;
}

.card-top img {
    max-width: 100%;
    height: auto;
}

.card-img-primary {
    display: block;
}

.card-img-secondary {
    display: none;
    position: absolute;
    top: 0;
    left: 0;
}

.card:hover .card-img-secondary {
    display: block;
}

.card-favorite {
    position: absolute;
    top: 4px;
    right: 0;

    display: flex;
    justify-content: center;
    align-items: center;

    color: #000;
    background-color: #fff;
    font-size: 18px;
    padding: 14px;

    cursor: pointer;
}

.card-favorite:hover {
    color: var(--color-red);
}

.card-tags {
    position: absolute;
    bottom: 40px;
    left: 0;
    right: 0;
}

.card-bottom {
    padding-top: 4px;
}

.card-title {
    font-size: 16px;
    text-transform: uppercase;
}

.card-price {
    color: var(--color-red);
    font-weight: bold;
}

.card-price-old {
    text-decoration: line-through;
}


/* Tag */
.tag {
    display: inline-block;
    padding: 4px 10px;
    color: #fff;
    font-weight: bold;
}


/* Footer */
footer {
    color: #fff;
    background-color: var(--color-dark);
    margin-top: 30px;
}

.footer-content {
    height: 100px;
    display: flex;
    justify-content: space-between;
    align-items: center;
}


/* Footer Nav */
.footer-nav ul {
    display: flex;
    gap: 10px;
}

.footer-nav a {
    color: #fff;
}


/* Footer Social */
.footer-social ul {
    display: flex;
}

